--- a/.github/workflows/build_installer.yml
+++ b/.github/workflows/build_installer.yml
@@ -5,40 +5,51 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
+    permissions:
+      contents: read
+      packages: write
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.12'
+        cache: 'pip'
+    
+    - name: Create directories
+      run: |
+        mkdir -p dist
+        mkdir -p build
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt pyinstaller
+        pip install -r requirements.txt
+        pip install pyinstaller
     
     - name: Install NSIS
-      run: |
-        Invoke-WebRequest "https://downloads.sourceforge.net/project/nsis/NSIS%203/3.09/nsis-3.09-setup.exe" -OutFile nsis-setup.exe
-        Start-Process -FilePath .\nsis-setup.exe -Args "/S" -Wait
-        echo "C:\Program Files (x86)\NSIS" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      uses: joncloud/makensis-action@v4
     
     - name: Build executable
       run: |
-        pyinstaller build_exe.spec
+        pyinstaller --clean --noconfirm build_exe.spec
+      shell: cmd
     
     - name: Build installer
       run: |
         makensis installer.nsi
+      shell: cmd
     
     - name: Upload installer
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: WebPConverter-Setup
         path: WebPConverter_Setup.exe
+        if-no-files-found: error
