--- a/.github/workflows/build_installer.yml
+++ b/.github/workflows/build_installer.yml
@@ -48,8 +48,9 @@ jobs:
       shell: cmd
     
     - name: Upload installer
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: WebPConverter-Setup
         path: WebPConverter_Setup.exe
         if-no-files-found: error
+        compression-level: 0
