--- a/.github/workflows/build_installer.yml
+++ b/.github/workflows/build_installer.yml
@@ -15,13 +15,15 @@ jobs:
       packages: write
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4.1.1
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5.0.0
       with:
         python-version: '3.12'
         cache: 'pip'
+        cache-dependency-path: requirements.txt
     
     - name: Create directories
       run: |
@@ -32,10 +34,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pyinstaller
+        pip install pyinstaller==6.11.0
     
     - name: Install NSIS
-      uses: joncloud/makensis-action@v4
+      uses: joncloud/makensis-action@v4.1
     
     - name: Build executable
       run: |
@@ -47,10 +49,11 @@ jobs:
         makensis installer.nsi
       shell: cmd
     
-    - name: Upload installer
-      uses: actions/upload-artifact@v4
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4.3.1
       with:
         name: WebPConverter-Setup
         path: WebPConverter_Setup.exe
         if-no-files-found: error
         compression-level: 0
+        retention-days: 5
